WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90038
HTMLFieldSetElement::m_documentVersion is not initialized
https://bugs.webkit.org/show_bug.cgi?id=90038
Summary
HTMLFieldSetElement::m_documentVersion is not initialized
Kent Tamura
Reported
2012-06-26 19:06:20 PDT
So, we have a bug that HTMLFieldSetElement::elements can return a wrong collection.
Attachments
Patch
(1.50 KB, patch)
2012-06-27 08:56 PDT
,
Rakesh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rakesh
Comment 1
2012-06-27 08:56:17 PDT
Created
attachment 149757
[details]
Patch patch
Kent Tamura
Comment 2
2012-06-27 16:02:51 PDT
Comment on
attachment 149757
[details]
Patch ok
WebKit Review Bot
Comment 3
2012-06-27 16:53:32 PDT
Comment on
attachment 149757
[details]
Patch Clearing flags on attachment: 149757 Committed
r121386
: <
http://trac.webkit.org/changeset/121386
>
WebKit Review Bot
Comment 4
2012-06-27 16:53:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug