HTMLFieldSetElement::m_documentVersion is not initialized https://bugs.webkit.org/show_bug.cgi?id=90038

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2012-06-27
Reviewed by Kent Tamura.

Initialised m_documentVersion member as HTMLFieldSetElement::elements can return an wrong collection.

Covered by existing tests.

* html/HTMLFieldSetElement.cpp:
(WebCore::HTMLFieldSetElement::HTMLFieldSetElement):
Initialised m_documentVersion.

Canonical link: https://commits.webkit.org/107955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121386 268f45cc-cd09-0410-ab3c-d52691b4dbfc