Source/WebCore/html/HTMLFieldSetElement.cpp
@@ -38,6 +38,7 @@ using namespace HTMLNames;
 
 inline HTMLFieldSetElement::HTMLFieldSetElement(const QualifiedName& tagName, Document* document, HTMLFormElement* form)
     : HTMLFormControlElement(tagName, document, form)
+    , m_documentVersion(0)
 {
     ASSERT(hasTagName(fieldsetTag));
 }
